horizontal scroll bar fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -92,6 +92,7 @@ button.section {
 
 ::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
 }
 
 ::-webkit-scrollbar-track {
